# TouchGFX_MaxxECU

./: README.md
CM4/Core/Inc/: maxxecu_can.h
CM4/Core/Src/: maxxecu_can.c
CM7/TouchGFX/App/alarm/: AlarmManager.cpp  AlarmOverlay.cpp
CM7/TouchGFX/App/alarm/screens/: SessionSummaryScreen.hpp
CM7/TouchGFX/App/presenters/: MainPresenter.cpp  MainPresenter.hpp
CM7/TouchGFX/App/views/: EngineView.cpp  EngineView.hpp  MainScreen.touchgfx  MainView.cpp  MainView.hpp  TempScreen.touchgfx  TempView.hpp
CM7/TouchGFX/App/widgets/: ArcGauge.cpp  ArcGauge.hpp  FillBar.cpp
Shared/Inc/: shared_data.h
Shared/Src/: shared_data.c
Simulator/: CMakeLists.txt  README.md  SimCANDriver.cpp  SimCANDriver.hpp  SimulatorMain.cpp
Simulator/Control/: SimControlPanel.hpp  SimControlPanel_Qt.cpp  SimControlPanel_Win32.cpp
Simulator/Stubs/: HAL_stub.cpp  HSEM_stub.cpp  SharedMemory_stub.cpp
Simulator/TouchGFX_Export/: README.md
Simulator/TouchGFX_Export/App/App/alarm/: AlarmConfig.hpp  AlarmManager.hpp  AlarmOverlay.hpp
Simulator/TouchGFX_Export/App/App/alarm/screens/: SessionSummaryScreen.cpp
Simulator/TouchGFX_Export/App/App/model/: Model.cpp  Model.hpp
Simulator/TouchGFX_Export/App/App/presenters/: EnginePresenter.cpp  EnginePresenter.hpp  TempPresenter.cpp  TempPresenter.hpp
Simulator/TouchGFX_Export/App/App/views/: EngineScreen.touchgfx  TempView.cpp
Simulator/TouchGFX_Export/App/App/widgets/: FillBar.hpp
